--- a/index.html
+++ b/index.html
@@ -58,17 +58,15 @@
         <h2>Me connaître un peu plus ...</h2>
         <p>
             En dehors de mes études, je suis passionnée par la musique, le chant en particulier, et le volley-ball. <br>
-            Ces activités me permettent de m'évader du monde numérique, c'est essentiels pour maintenir un équilibre. <br><br>
+            Ces activités me permettent de m'évader du monde numérique, c'est essentiels pour maintenir un équilibre.<br><br>
 
-            Ce qui me caractérise le plus c'est ma détermination et ma <br>
-            persévérence. J'aime les défis, et pour moi, chaque bstacle est <br>
-            une opportunité d'apprendre et de grandir. Cette mentalité m'aide à <br>
-            rester motivée dans mes projets professionnels et personnels. <br><br>
+            Ce qui me caractérise le plus c'est ma détermination et ma persévérence. J'aime les défis, et pour moi, <br>
+            chaque bstacle est une opportunité d'apprendre et de grandir. Cette mentalité m'aide à rester motivée dans <br>
+            mes projets professionnels et personnels. <br><br>
 
-            Enfin, j'apprécie les occasions de travailler avec d'autres <br>
-            personnes, quelles soient passionnées ou non par la technologie. <br>
-            Pour moi chaque collaboration est une opportunité d'échanger des <br>
-            idées et d'apprendre de nouvelles choses. <br><br>
+            Enfin, j'apprécie les occasions de travailler avec d'autres personnes, quelles soient passionnées ou non <br>
+            par la technologie. Pour moi chaque collaboration est une opportunité d'échanger des idées et d'apprendre <br>    
+            de nouvelles choses. <br><br>
         </p>
     </div>
 
