--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <nav>
             <!--<a href="#"><img src="img/noella.png" alt="logo" class="logo"></a>-->
             <ul>
-                <li><a href="#home">Accueil</a></li>
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#skills">Compétences</a></li>
-                <li><a href="#projects">Projets</a></li>
-                <li><a href="#contacts">Contacts</a></li>
+                <li><a href="#home">ACCUEIL</a></li>
+                <li><a href="#about">À PROPOS</a></li>
+                <li><a href="#skills">COMPETENCES</a></li>
+                <li><a href="#projects">PROJETS</a></li>
+                <li><a href="#contacts">CONTACTS</a></li>
             </ul>
         </nav>
     </header>
     
-    <section class="title"  id="accueil">
+    <section class="title"  id="home">
         <h1>Étudiante en <span class="auto-typing"></span></h1>
         <p>
             Bonjour, je suis Noëlla, étudiante en deuxième année de Bachelor Informatique. <br>
