--- a/index.html
+++ b/index.html
@@ -162,6 +162,8 @@
                 <img src="img/mail.png" alt="email">
                 <span class="label">mailholnoella@gmail.com</span>
             </div>
+        </div>
+        <div class="flex2">
             <div class="contact">
                 <img src="img/linkedin.png" alt="linkedin">
                 <span class="label">LinkedIn</span>
