--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <h3>Javascript</h3>
             </div>
             <div class="logo">
-                <img src="img/logo-react.png" alt="c#">
+                <img src="img/logo-react.png" alt="react">
                 <h3>React</h3>
             </div>
             <div class="logo">
@@ -106,8 +106,12 @@
                 <h3>Monogame</h3>
             </div>
             <div class="logo">
-                <img src="img/logo-sql.png" alt="c#">
+                <img src="img/logo-sql.png" alt="sql">
                 <h3>SQL</h3>
+            </div>
+            <div class="logo">
+                <img src="img/logo-c.png" alt="c">
+                <h3>C</h3>
             </div>
         </div>
     </div>
@@ -159,14 +163,26 @@
         <h2>Me contacter</h2>
         <div class="flex2">
             <div class="contact">
-                <img src="img/mail.png" alt="email">
-                <span class="label">mailholnoella@gmail.com</span>
+                <a href="https://github.com/mnoella" class="github" target="_blank">
+                    <img src="img/github.png" alt="github">
+                    <span class="label">Github</span>
+                </a>
             </div>
         </div>
         <div class="flex2">
             <div class="contact">
-                <img src="img/linkedin.png" alt="linkedin">
-                <span class="label">LinkedIn</span>
+                <a href="mailto:mailholnoella@gmail.com" class="email" target="_blank">
+                    <img src="img/mail.png" alt="email">
+                    <span class="label">mailholnoella@gmail.com</span>
+                </a>
+            </div>
+        </div>
+        <div class="flex2">
+            <div class="contact">
+                <a href="https://www.linkedin.com/in/noella-mailhol" class="linkedin" target="_blank">
+                    <img src="img/linkedin.png" alt="linkedin">
+                    <span class="label">LinkedIn</span>
+                </a>
             </div>
         </div>
     </div>
