--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="title"  id="home">
         <h1>Étudiante en <span class="auto-typing"></span></h1>
         <p>
-            Bonjour, je suis Noëlla, étudiante en deuxième année de Bachelor Informatique. <br>
+            Bonjour, je suis Noëlla, étudiante en première année de Mastère Informatique. <br>
             Mon parcours académique en informatique a été une occasion d'acquérir des compétences <br>
             en programmation. Mon choix de carrière s'est naturellement orienté vers le développement <br>
             web, un domaine qui m'inspire particulièrement. La conception et le développement de jeux <br>
