--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                     où l'utilisateur peut saisir un prompt et visualiser la réponse générée par le modèle IA.
                 </p>
                 <h3>Maquette</h3>
+                <img src="img/tk.png" alt="maquette">
             </div>
             <div id="mazeModal" class="project-modal">
                 <span class="close" onclick="closeModal()">&times;</span>
@@ -206,6 +207,41 @@
                         - Des pièces à ramasser seront ajoutées ultérieurement pour enrichir le gameplay.
                 </p>
                 <h3>Eléments du jeu</h3>
+                <div class="mazegame">
+                    <img src="img/mazegame.png" alt="mazegame">
+                </div>
+                <div>
+                    <p>héro:</p>
+                    <img src="img/hero.png" alt="héro">
+                </div>
+                <div>
+                    <p>monstres : </p>
+                    <img src="img/Bmonster.png" alt="monster">
+                    <img src="img/Gmonster.png" alt="monster">
+                    <img src="img/Rmonster.png" alt="monster">
+                    <img src="img/Ymonster.png" alt="monster">
+                </div>
+                <div>
+                    <p>pièces:</p>
+                    <img src="img/coin2.png" alt="coin">
+                    <img src="img/coin10.png" alt="coin">
+                    <img src="img/coin20.png" alt="coin">
+                    <img src="img/coin30.png" alt="coin">
+                </div>
+                <div>
+                    <p>vie:</p>
+                    <img src="img/lives.jpg" alt="lives">
+                </div>
+                <div>
+                    <p>ligne d'arrivée:</p>
+                    <img src="img/flag.png" alt="flag">
+                </div>
+                <div class="gitcode">
+                    <a href="https://github.com/mnoella" class="github" target="_blank">
+                        <img src="img/github.png" alt="github">
+                        <span class="label">Github</span>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
