--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="title"  id="home">
         <h1>Étudiante en <span class="auto-typing"></span></h1>
         <p>
-            Bonjour, je suis Noëlla, étudiante en première année de Mastère Informatique. <br>
+            Bonjour, je suis Noëlla, étudiante en Bachelor 2 Informatique à Lille Ynov Campus. <br>
             Mon parcours académique en informatique a été une occasion d'acquérir des compétences <br>
             en programmation. Mon choix de carrière s'est naturellement orienté vers le développement <br>
             web, un domaine qui m'inspire particulièrement. La conception et le développement de jeux <br>
@@ -138,15 +138,16 @@
                 <img src="img/maze.jpg" alt="projet csharp">
                 <h3>Maze Game C#</h3>
             </div>
-            <div class="projet" onclick="openModal('meteo')">
+            <div class="projet">
                 <img src="img/projet_js.jpg" alt="projet JS">
                 <h3>Projet1 JS</h3>
+                <h5>À  VENIR ...</h5>
             </div>
             <div class="projet">
-                <a href="/">
-                    <img src="img/react.jpg" alt="projet React">
-                    <h3>Projet React</h3>
-                </a>
+                <img src="img/react.jpg" alt="projet React">
+                <h3>Projet React</h3>
+                
+                <h5>À  VENIR ...</h5>
             </div>
         </div>
     </div>
@@ -164,6 +165,15 @@
                     existants et un formulaire pour ajouter de nouveaux commentaires.
                 </p>
                 <h3>Maquette</h3>
+                <div class="connexion">
+                    <img src="img/sign.png" alt="inscription" class="img1">
+                    <img src="img/co.png" alt="connexion" class="img2">
+                </div>
+                <div class="frame">
+                    <img src="img/accueil.png" alt="accueil">
+                    <img src="img/article.png" alt="article">
+                    <img src="img/créer.png" alt="écrire un article">
+                </div>
             </div>
             <div id="gptModal" class="project-modal">
                 <span class="close" onclick="closeModal()">&times;</span>
@@ -175,7 +185,9 @@
                     où l'utilisateur peut saisir un prompt et visualiser la réponse générée par le modèle IA.
                 </p>
                 <h3>Maquette</h3>
-                <img src="img/tk.png" alt="maquette">
+                <div class="tk">
+                    <img src="img/tk.png" alt="maquette">
+                </div>
             </div>
             <div id="mazeModal" class="project-modal">
                 <span class="close" onclick="closeModal()">&times;</span>
@@ -236,12 +248,13 @@
                     <p>ligne d'arrivée:</p>
                     <img src="img/flag.png" alt="flag">
                 </div>
+                <!--
                 <div class="gitcode">
                     <a href="https://github.com/mnoella" class="github" target="_blank">
                         <img src="img/github.png" alt="github">
                         <span class="label">Github</span>
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
