--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         <h2>Me connaître un peu plus ...</h2>
         <p>
             En dehors de mes études, je suis passionnée par la musique, le chant en particulier, et le volley-ball. <br>
-            Ces activités me permettent de m'évader du monde numérique, c'est essentiels pour maintenir un équilibre.<br><br>
+            Ces activités me permettent de m'évader du monde numérique, c'est essentiel pour maintenir un équilibre.<br><br>
 
             Ce qui me caractérise le plus c'est ma détermination et ma persévérence. J'aime les défis, et pour moi, <br>
-            chaque bstacle est une opportunité d'apprendre et de grandir. Cette mentalité m'aide à rester motivée dans <br>
+            chaque obstacle est une opportunité d'apprendre et de grandir. Cette mentalité m'aide à rester motivée dans <br>
             mes projets professionnels et personnels. <br><br>
 
-            Enfin, j'apprécie les occasions de travailler avec d'autres personnes, quelles soient passionnées ou non <br>
+            Enfin, j'apprécie les occasions de travailler avec d'autres personnes, qu'elles soient passionnées ou non <br>
             par la technologie. Pour moi chaque collaboration est une opportunité d'échanger des idées et d'apprendre <br>    
             de nouvelles choses. <br><br>
         </p>
