--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             ainsi que d'autres applications captivent mon intérêt de manière singulière.
         </p>
         <!--<a href="#">Me contacter</a>-->
-        <a href="img/moncv.pdf" class="cv" target="_blank">Mon CV</a>
+        <a href="img/cv.pdf" class="cv" target="_blank">Mon CV</a>
     </section>
     
     <div class="overlay">
