--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@
                 </a>
             </div>
         </div>
+        <div class="flex2">
+            <p>© 2024 Noëlla MAILHOL | Tous droits réservés .</p>
+        </div>
     </div>
     <script src="js/click.js"></script>
 </body>
