--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#skills">COMPETENCES</a></li>
                 <li><a href="#projects">PROJETS</a></li>
                 <li><a href="#contacts">CONTACTS</a></li>
+                <li><a href="https://mnoella.github.io/my-dev-journey/">BLOG</a></li>
             </ul>
         </nav>
     </header>
@@ -26,7 +27,7 @@
     <section class="title"  id="home">
         <h1>Étudiante en <span class="auto-typing"></span></h1>
         <p>
-            Bonjour, je suis Noëlla, étudiante en Bachelor 2 Informatique à Lille Ynov Campus. <br>
+            Bonjour, je suis Noëlla, étudiante en Bachelor 3 Développement Web à Lille Ynov Campus. <br>
             Mon parcours académique en informatique a été une occasion d'acquérir des compétences <br>
             en programmation. Mon choix de carrière s'est naturellement orienté vers le développement <br>
             web, un domaine qui m'inspire particulièrement. La conception et le développement de jeux <br>
@@ -43,7 +44,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         let typed = new Typed('.auto-typing', {
-            strings: ['Informatique'],
+            strings: ['Développement Web'],
             typeSpeed: 100,
             backSpeed: 100,
             loop: true,
