--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#skills">COMPETENCES</a></li>
                 <li><a href="#projects">PROJETS</a></li>
                 <li><a href="#contacts">CONTACTS</a></li>
-                <li><a href="https://mnoella.github.io/my-dev-journey/" target="_blank">BLOG</a></li>
+                <li><a href="https://mnoella.github.io/my-dev-journey" target="_blank">BLOG</a></li>
             </ul>
         </nav>
     </header>
