feat(Ameliorations portfolio)

--- a/index.html
+++ b/index.html
@@ -25,13 +25,20 @@
     </header>
     
     <section class="title"  id="home">
-        <h1>Étudiante en <span class="auto-typing"></span></h1>
+        <h1>Développeuse <span class="auto-typing"></span></h1>
         <p>
-            Bonjour, je suis Noëlla, étudiante en Bachelor 3 Développement Web à Lille Ynov Campus. <br>
-            Mon parcours académique en informatique a été une occasion d'acquérir des compétences <br>
-            en programmation. Mon choix de carrière s'est naturellement orienté vers le développement <br>
-            web, un domaine qui m'inspire particulièrement. La conception et le développement de jeux <br>
-            ainsi que d'autres applications captivent mon intérêt de manière singulière.
+            <strong>Bonjour, je suis Noëlla, développeuse web & mobile en alternance à MyDigitalSchool Lille.</strong> <br>
+            Actuellement en Bachelor 3, je prépare le diplôme de <strong>Concepteur Développeur d'Applications (CDA)</strong>. <br>
+            Grâce à mon parcours académique en informatique et mes expériences en entreprise, j’ai acquis de <br>
+            solides compétences en <strong>programmation, conception d’interfaces et développement full stack (frontend & backend).</strong> <br>
+
+            Passionnée par la création d’expériences interactives, j’aime concevoir des <strong>solutions innovantes et intuitives,</strong> <br>
+            que ce soit pour le <strong>web, le mobile ou d’autres types d’applications.</strong> <br>
+
+            Toujours en quête d’apprentissage, je prévois de poursuivre un <strong>Mastère Full Stack</strong> afin de renforcer mon expertise <br>
+            et ma capacité à <strong>mener des projets de bout en bout.</strong> <br>
+
+            💡 <strong>Intéressée par toute opportunité de collaboration ou d’échange autour du développement !</strong> 🚀 <br>
         </p>
         <!--<a href="#">Me contacter</a>-->
         <a href="img/cv.pdf" class="cv" target="_blank">Mon CV</a>
@@ -44,7 +51,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         let typed = new Typed('.auto-typing', {
-            strings: ['Développement Web'],
+            strings: ['Full Stack'],
             typeSpeed: 100,
             backSpeed: 100,
             loop: true,
@@ -58,16 +65,15 @@
     <div class="about" id="about">
         <h2>Me connaître un peu plus ...</h2>
         <p>
-            En dehors de mes études, je suis passionnée par la musique, le chant en particulier, et le volley-ball. <br>
-            Ces activités me permettent de m'évader du monde numérique, c'est essentiel pour maintenir un équilibre.<br><br>
+            En dehors du développement, je suis passionnée par la musique, en particulier le chant, ainsi que par le volley-ball. <br>
+            Ces activités m’offrent un vrai équilibre en me permettant de déconnecter du monde numérique. <br><br>
 
-            Ce qui me caractérise le plus c'est ma détermination et ma persévérence. J'aime les défis, et pour moi, <br>
-            chaque obstacle est une opportunité d'apprendre et de grandir. Cette mentalité m'aide à rester motivée dans <br>
-            mes projets professionnels et personnels. <br><br>
+            Ce qui me définit le plus, c’est ma détermination et ma persévérance. J’aime les défis et je vois chaque obstacle <br>
+            comme une opportunité d’apprendre et de progresser. Cette mentalité m’aide à rester motivée dans mes projets, <br>
+            qu’ils soient professionnels ou personnels. <br><br>
 
-            Enfin, j'apprécie les occasions de travailler avec d'autres personnes, qu'elles soient passionnées ou non <br>
-            par la technologie. Pour moi chaque collaboration est une opportunité d'échanger des idées et d'apprendre <br>    
-            de nouvelles choses. <br><br>
+            Enfin, j’apprécie le travail en équipe et les échanges enrichissants. Qu’il s’agisse de passionnés de technologie ou non, <br>
+            chaque collaboration est une occasion d’apprendre, de partager et de grandir ensemble. <br><br>
         </p>
     </div>
 
@@ -88,7 +94,19 @@
             </div>
             <div class="logo">
                 <img src="img/logo-react.png" alt="react">
-                <h3>React</h3>
+                <h3>React/React Native</h3>
+            </div>
+            <div class="logo">
+                <img src="img/nestJS.png" alt="react">
+                <h3>NestJS</h3>
+            </div>
+            <div class="logo">
+                <img src="img/typeorm.png" alt="react">
+                <h3>TypeORM</h3>
+            </div>
+            <div class="logo">
+                <img src="img/nextJS.png" alt="react">
+                <h3>Next.js</h3>
             </div>
             <div class="logo">
                 <img src="img/logo-php.png" alt="php"  >
