fix: update porfolio

--- a/index.html
+++ b/index.html
@@ -27,18 +27,15 @@
     <section class="title"  id="home">
         <h1>Développeuse <span class="auto-typing"></span></h1>
         <p>
-            <strong>Bonjour, je suis Noëlla, développeuse web & mobile en alternance à MyDigitalSchool Lille.</strong> <br>
-            Actuellement en Bachelor 3, je prépare le diplôme de <strong>Concepteur Développeur d'Applications (CDA)</strong>. <br>
-            Grâce à mon parcours académique en informatique et mes expériences en entreprise, j’ai acquis de <br>
-            solides compétences en <strong>programmation, conception d’interfaces et développement full stack (frontend & backend).</strong> <br>
+            Bonjour, je suis Noëlla MAILHOL, je suis passionnée du développpement d'application web <br>
+            et mobile. Suite à l'obtention de mon titre Concepteur Développeur d'Application (CDA) <br>
+            j'ai décidé de poursuivre en MBA Développement FullStack à MyDigitalSchool de Lille cette année. <br>
+            Mon parcours académique en informatique a été une occasion d'acquérir les compétences nécessaires <br>
+            pour mener à bien un projet quelconque. <br>
+            Mon choix de carrière s'est naturellement orienté vers le développement <br>
+            web, un domaine qui m'inspire particulièrement. <br>
 
-            Passionnée par la création d’expériences interactives, j’aime concevoir des <strong>solutions innovantes et intuitives,</strong> <br>
-            que ce soit pour le <strong>web, le mobile ou d’autres types d’applications.</strong> <br>
-
-            Toujours en quête d’apprentissage, je prévois de poursuivre un <strong>Mastère Full Stack</strong> afin de renforcer mon expertise <br>
-            et ma capacité à <strong>mener des projets de bout en bout.</strong> <br>
-
-            💡 <strong>Intéressée par toute opportunité de collaboration ou d’échange autour du développement !</strong> 🚀 <br>
+            💡 <strong>Je suis ouverte à toute opportunité autour du développement !</strong> 🚀 <br>
         </p>
         <!--<a href="#">Me contacter</a>-->
         <a href="img/cv.pdf" class="cv" target="_blank">Mon CV</a>
@@ -51,7 +48,7 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         let typed = new Typed('.auto-typing', {
-            strings: ['Full Stack'],
+            strings: ['FullStack'],
             typeSpeed: 100,
             backSpeed: 100,
             loop: true,
